--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   file_picker_cross: ^2.0.0
   dio: any
+  url_launcher: any
 
 dev_dependencies:
   flutter_test:
